RESOLVED FIXED173742
Layout Test security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=173742
Summary Layout Test security/contentSecurityPolicy/plugins-types-allows-youtube-plugi...
Matt Lewis
Reported 2017-06-22 16:07:23 PDT
security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement.html is a flaky failure. According to the flakiness dashboard, the test has been failing intermittently on Sierra WK2 Release but has recently failed once on El Capitan WK2 Debug. https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=security%2FcontentSecurityPolicy%2Fplugins-types-allows-youtube-plugin-replacement.html This does not appear to be a recent regression. This does not appear to be a recent regression. First failure on the board for Sierra was on 6/8/2017: https://build.webkit.org/builders/Apple%20Sierra%20Release%20WK2%20(Tests)/builds/2086 The first El Capitan Failure was on 6/17/2017: https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/builds/1795 https://build.webkit.org/results/Apple%20Sierra%20Release%20WK2%20(Tests)/r218714%20(2468)/results.html https://build.webkit.org/builders/Apple%20Sierra%20Release%20WK2%20(Tests)/builds/2468 Diff: --- /Volumes/Data/slave/sierra-release-tests-wk2/build/layout-test-results/security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement-expected.txt +++ /Volumes/Data/slave/sierra-release-tests-wk2/build/layout-test-results/security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement-actual.txt @@ -1,2 +1 @@ -Blocked access to external URL https://www.youtube.com/embed/UF8uR6Z6KLc - +
Attachments
Matt Lewis
Comment 1 2017-06-22 16:33:09 PDT
I was able to reproduce this locally on Sierra with: run-webkit-tests security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement.html --no-retry-failure --iterations=500 -f -g
Matt Lewis
Comment 2 2017-12-13 17:07:47 PST
Radar WebKit Bug Importer
Comment 3 2018-07-31 17:02:10 PDT
Chris Dumez
Comment 4 2025-09-04 19:48:22 PDT
Chris Dumez
Comment 5 2025-09-04 19:52:34 PDT
EWS
Comment 6 2025-09-07 17:39:14 PDT
Committed 299676@main (32660e42d5be): <https://commits.webkit.org/299676@main> Reviewed commits have been landed. Closing PR #50340 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.