Source/WebCore/page/PageConsoleClient.h
@@ -48,6 +48,7 @@ namespace WebCore {
 
 class Document;
 class Page;
+class StringCallback;
 
 class WEBCORE_EXPORT PageConsoleClient final : public JSC::ConsoleClient, public CanMakeCheckedPtr<PageConsoleClient> {
     WTF_MAKE_TZONE_ALLOCATED_EXPORT(PageConsoleClient, WEBCORE_EXPORT);
@@ -62,6 +63,7 @@ public:
     static void mute();
     static void unmute();
 
+    WEBCORE_EXPORT void setConsoleMessageListener(RefPtr<StringCallback>&&); // For testing.
     void addMessage(std::unique_ptr<Inspector::ConsoleMessage>&&);
 
     // The following addMessage function are deprecated.
@@ -90,6 +92,7 @@ private:
     Ref<Page> protectedPage() const;
 
     WeakRef<Page> m_page;
+    RefPtr<StringCallback> m_consoleMessageListener;
 };
 
 } // namespace WebCore
